--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     </div>
 
     <a-scene
-      mindar-image="imageTargetSrc:C:\Users\Angela\Documents\GitHub\entrelazados\targets (2).mind"
+      mindar-image="imageTargetSrc:https://github.com/josebarrios99/entrelazados/blob/main/targets%20(2).mind"
       vr-mode-ui="enabled: false"
       device-orientation-permission-ui="enabled: false"
     >
